SAK-24819 Block multiple submissions in forums

--- a/msgcntr/msgcntr-2.8.x-features-backport/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/msgcntr/msgcntr-2.8.x-features-backport/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -33,6 +33,7 @@ cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
 cdfm_button_bar_revise=Edit
 cdfm_button_bar_delete=Delete
+cdfm_processing_submit_message=Processing...
 cdfm_button_bar_add_groups_users=Add Individuals/Groups
 cdfm_button_bar_mark_as_read= Mark as Read
 cdfm_button_bar_reply_to_msg = Reply to Message
