--- a/samigo/SAM-1263/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es_ES.properties
+++ b/samigo/SAM-1263/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es_ES.properties
@@ -61,6 +61,7 @@ pool=Bater\u00eda
 question=Pregunta
 q=Pregunta
 q_view=Preguntas
+q_imq=Imagen con zonas
 range_eq=Rango
 resp_fld=Respuesta\:
 responses=Respuestas
@@ -244,6 +245,7 @@ t_fileUpload=Mostrar subida de ficheros
 t_toggleDiv=Expandir/Cerrar parte
 t_retake=Hacer de nuevo
 t_modelShortAnswer=Modelo de respuesta corta
+t_hotspotanswer=Muestra la respuesta del alumno en la imagen
 # alt tag for images: starts with alt_
 alt_recording=Grabaci\u00f3n
 alt_correct=Correcto
@@ -304,3 +306,4 @@ number_format_error_submission_id=Debe especificar un n\u00famero real para ajus
 data_discrepancy_1=Est\u00e1s viendo esta p\u00e1gina porque est\u00e1 calificando esta evaluaci\u00f3n en m\u00faltiples ventanas del navegador. 
 data_discrepancy_2=Por favor, cierre todas las ventanas excepto una.
 
+show_hotspotanswer=En la imagen
