hotspot imagemap question type

--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_es.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_es.properties
@@ -81,10 +81,12 @@ correctItemFeedback=Comentario correcto
 correct_answer=Respuesta correcta
 correct_answer_opti=Respuesta correcta (opcional)
 correct_incorrect_an=Comentario a la respuesta correcta/incorrecta
+correct_im_feedback_opt=Comentario a la relaci\u00F3n correcta (opcional)
 correct_match_feedback_opt=Comentario a la relaci\u00F3n correcta (opcional)
 create_modify_a=A\u00F1adir/Editar examen
 create_modify_p=A\u00F1adir/Editar parte
 create_pairing=A\u00F1adir/Editar parejas y el comentario opcional
+create_IM_pairing=A\u00F1adir/Editar zonas de la imagen y el comentario opcional
 creator=Creador
 dash=-
 deliveryDate_error=La fecha de env\u00EDo no tiene el formato adecuado: dd/mm/yyyy hh:mm:ss:aa
@@ -142,7 +144,12 @@ greater=>
 high_security=Alta seguridad
 hrs=horas
 if_multiple_submissi=Si existen varios env\u00EDos por usuario
+im_choice_col=Texto descriptivo
+im_currently_editing=Actualmente en edici\u00F3n
+im_match_col=Zona de la imagen
 image=Imagen
+image_map_question=Imagen con zonas
+image_map_src=Seleccione una imagen
 img_delete=/images/icons/delete.png
 img_edit=/images/icons/pencil.png
 img_part_delete=/images/icons/page_delete.png
@@ -156,6 +163,7 @@ import_from_question_bank=*** Importar desde el Banco de Preguntas
 incorrect=Incorrecto
 incorrectItemFeedback=Comentario incorrecto
 incorrect_answer_op=Respuesta incorrecta (opcional)
+incorrect_im_feedback_opt=Comentario a la relaci\u00F3n incorrecta (opcional)
 incorrect_match_feedback_opt=Comentario a la relaci\u00F3n incorrecta (opcional)
 information=Informaci\u00F3n
 ins_new_q=Insertar nueva pregunta
@@ -198,8 +206,11 @@ new_p=Nueva parte
 next_prev=Existen botones de SIGUIENTE y ANTERIOR en cada p\u00E1gina para la navegaci\u00F3n.
 no=No
 noMatchingPair_error=Antes de guardar esta cuesti\u00F3n, debe tener por lo menos una pareja. Introduzca una pareja y pulse sobre "Guardar Pareja". En ese momento podr\u00E1 guardar la pregunta pulsando en Guardar en la parte inferior de la p\u00E1gina.
+noImageMapMatchingPair_error=Antes de guardar esta cuesti\u00F3n, debe tener por lo menos una zona en la imagen. Introduzca una zona en la imagen y pulse sobre "Guardar Zona". En ese momento podr\u00E1 guardar la pregunta pulsando en Guardar en la parte inferior de la p\u00E1gina.
 no_attachments=No hay ficheros adjuntos.
 no_feedback_will_be=NO se mostrar\u00E1n los comentarios a los alumnos.
+all_im_zones_needed=Debe establecer todas las zonas de la imagen
+im_description=Descripci\u00F3n
 no_matching_pair=No se han creado parejas
 no_toc=No hay p\u00E1gina con tabla de contenidos.
 none=ninguno
@@ -273,6 +284,7 @@ remove_attachment_heading=Eliminar el fichero adjunto
 remove_p_conf=Confirmaci\u00F3n de borrado de parte
 remove_q_conf=Confirmaci\u00F3n de borrado de pregunta
 remove_question_conf=Confirmaci\u00F3n de borrado de pregunta
+require_all_ok=Permitir que el crédito parcial
 req_rationale=Razonamiento requerido
 require_rationale=Requiere razonamiento
 restart_numbering_be=Reiniciar la numeraci\u00F3n entre partes.
