--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es.properties
@@ -140,6 +140,7 @@ q_mult_surv=Selecci\u00F3n m\u00FAltiple
 q_short_ess=Respuesta corta
 q_tf=Verdadero/Falso
 q_view=Preguntas
+q_imq=Imagen con zonas
 qtile_1_eq=Cuartil 1\u00BA
 qtile_3_eq=Cuartil 3\u00BA
 question=Pregunta
@@ -198,6 +199,7 @@ t_fileUpload=Mostrar subida de ficheros
 t_fullShortAnswer=Visualizar la respuesta corta completa
 t_histogram=Ir a la p\u00E1gina de estad\u00EDsitcas
 t_modelShortAnswer=Modelo de respuesta corta
+t_hotspotanswer=Muestra la respuesta del alumno en la imagen
 t_playAudio=Reproducir sonido
 t_questionScores=Ir a la p\u00E1gina de puntuaci\u00F3n de las preguntas
 t_rationale=Ver el razonamiento del estudiante
@@ -255,3 +257,5 @@ random_draw_info=(modo aleatorio, {0} preguntas de la bater\u00EDa de {1}):
 
 applyGradesDesc=a todos los participantes "Sin entrega". 
 applyGrades=Aplicar esta puntuaci\u00F3n
+
+show_hotspotanswer=En la imagen
