--- a/melete/melete-2.8.2_sak29x_features-backport/melete-app/src/bundle/org/etudes/tool/melete/bundle/Messages.properties
+++ b/melete/melete-2.8.2_sak29x_features-backport/melete-app/src/bundle/org/etudes/tool/melete/bundle/Messages.properties
@@ -863,7 +863,7 @@ resources_proper_pan_cstatus=Copyright Status
 
 #topnavbar
 topnavbar_view=View
-topnavbar_author=Author
+topnavbar_author=Edit
 topnavbar_manage=Manage
 topnavbar_preferences=Preferences
 
