--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_fr_FR.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_fr_FR.properties
@@ -50,16 +50,91 @@ button_add=Ajouter
 copy_to_pool=Copier au Groupement
 button_save_pair=Enregister l'appariement
 button_close=Fermer
+button_save_pub=Enregistrer et publier l'\u00e9valuation
+button_republish_and_regrade=R\u00e9\u00e9valuer et Rediffuser
 button_republish=Rediffuser
-button_republish_and_regrade=R\u00E9\u00E9valuet et Rediffuser
-button_return=Retour
-button_save_pair=Enregister l'appariement
-button_save_pub=Enregistrer et publier l'\u00E9valuation
-case_sensitive=Sensible \u00E0 la casse?
-cert_rem_assmt=Voulez-vous vraiment supprimer cette \u00E9valuation intitul\u00E9e
-cert_rem_attachment=Etes-vous certain de vouloir supprimer ce fichier joint?
-cert_rem_q=Voulez-vous vraiment supprimer cette question?
-change=Modifier
+button_return=Retourner
+button_update_points=Update Points
+
+# CALCULATED_QUESTION
+calculated_question=Calculated Question
+calc_question_var_label=Variables
+calc_question_formula_label=Formules
+calc_question_example_label=Exemple
+calc_question_varname_col=Variable Name
+calc_question_varname=Variable Name:
+calc_question_formulaname_col=Formula Name
+calc_question_formula_col=Formule
+calc_question_min=Min
+calc_question_max=Max
+calc_question_dec=Decimal Places
+calc_question_tolerance=Tolerance
+calc_question_general_instructsion_label=What is a Calculated Question
+calc_question_general_instructions1=A calculated question calculates new answers for every test, based on variables whose value changes each time.  The answer is based on a formula, using those variables.
+calc_question_general_instructions2=A variable definition has a name, a minimum and maximum value, and a number of decimal places.
+calc_question_general_instructions3=A formula definition has a name, an mathematical expression that uses the variables, and a tolerance, so that answers within that tolerance of the answer are also considered correct.
+calc_question_walkthrough_label=Steps to create a Calculated Question
+calc_question_walkthrough1=Fill out the Question Text with the information that the student will see, including the variable and formula placeholders (see examples below)
+calc_question_walkthrough2=Press the Extract Variables and Formulas button to create the variables and formulas.
+calc_question_walkthrough3=Change the Min, Max, and Decimal Places for all of the variables to define their ranges of valid values.
+calc_question_walkthrough4=Enter the mathematical expression for each Formula, inserting the Variables where needed.
+calc_question_walkthrough5=Press the Save button to save your work.
+calc_question_walkthrough6=Any errors will be displayed at the top of the page.  They must be fixed before saving.  Fields with errors will be highlighted to show you where you have problems.
+calc_question_extract_button=Extract Variables and Formulas
+calc_question_define_vars=Define variables to use in this question below. Reference them in the question text by putting them in single curly braces eg. {x}.  Variable names are alpha-numeric but must begin with an alpha character
+calc_question_answer_expression=Place double curly braces (e.g. {{y}} around a formula name, to define where the student's input box will display.  Formula names are alpha-numeric but must begin with an alpha character.
+calc_question_answer_variance=You may define acceptable tolerance as a constant (0.01) or percentage (1.5%) of the answer. (Defaults to 0.01.)
+calc_question_answer_decimal=Variables and formulas support decimals. Default is 3.
+calc_question_example1=Kevin has {x} apples. Jane eats {y}. How many does Kevin have now? {{z}}
+calc_question_functions=You can use the following math functions: SIN, COS, TAN, ASIN, ACOS, ATAN, ABS, EXP, SIGN, SQRT, FACTORIAL, LOG10, LOG, and LN.
+calc_question_example2=Solve: COS({a}) * ({c} - {b}) = {{z}} Formula z would be COS({a}) * ({c}-{b})
+calc_question_constants=There are two built-in constants, PI(3.14...) and e(2.718...). Use them in your answer expression.
+calc_question_unique_names=Variables and Formulas cannot have the same name.
+calc_question_preview=You are strongly encouraged to use the Preview Assessment feature to check for mistakes.  Extract and Save buttons both validate formulas.
+calc_question_hideshow=Show/Hide more instructions and examples
+calc_question_operators=Valid Operators: + - * / ^ ()
+calc_question_error_syntax=Your answer's acceptable variance and expected decimal places must be formatted in this fashion: {x+y|1%,2} or {x+y|1,2}. The expected decimal places can be omitted e.g. {x+y|1%}. 6 is the limit on decimal places.
+calc_question_error_expression=There is a mathematical error in your answer expression.
+calc_question_error_expression_variables=The mathematical formula references a variable that used in the instructions.
+calc_question_prompt_preview=After you save, be sure to use Preview Assessment to ensure this questions functions as you expect!
+
+# CALCULATED QUESTION ERRORS
+empty_field=Field cannot be empty
+no_variables_defined=No variables have been defined
+no_formulas_defined=No formulas have been defined
+max_less_than_min=A variable has a max less than its min
+invalid_tolerance=Tolerance must be a valid double or percentage (5.0 or 5.0%)
+tolerance_negative=Tolerance must be positive; it defines the range around the answer that will be considered correct
+invalid_min=Min must be a valid number (0.0)
+invalid_max=Max must be a valid number (0.0)
+unique_names=Variables and Formulas must have unique names
+variable_name_empty=Variable name cannot be empty.  Variables must begin with an alpha character and can only contain alpha, numeric, and underscore characters and are wrapped in single curly braces (i.e. {x} )
+variable_name_invalid=Variable name is invalid.  Variables must begin with an alpha character and can only contain alpha, numeric, and underscore characters and are wrapped in single curly braces (i.e. {x} )
+formula_name_empty=Formula name cannot be empty.  Formula names must begin with an alpha character and can only contain alpha, numeric, and underscore characters and are wrapped in double curly braces (i.e. {{y}} )
+formula_name_invalid=Formula name is invalid.  Formula names must begin with an alpha character and can only contain alpha, numeric, and underscore characters and are wrapped in double curly braces (i.e. {{y}} )
+formulas_not_validated=Formulas not validated due to previous errors
+samigo_formula_error_1=1: Erreur de syntaxe
+samigo_formula_error_2=2: Syntax Error
+samigo_formula_error_3=3: Parenthesis Missing
+samigo_formula_error_4=4: Empty Expression
+samigo_formula_error_5=5: Unexpected Part
+samigo_formula_error_6=6: Unexpected end of Expression 
+samigo_formula_error_7=7: Value expected
+samigo_formula_error_8=8: Formula can have negative square root
+samigo_formula_error_9=9: Variable not defined in instructions
+samigo_formula_error_101=101: Unknown operator
+samigo_formula_error_102=102: Unknown expression
+samigo_formula_error_103=103: Unknown variable
+samigo_formula_error_104=104: Unknown operator
+samigo_formula_error_200=200: Expression too long
+samigo_formula_error_300=300: Defining variable failed
+samigo_formula_error_400=400: Integer value expected in function
+samigo_formula_error_500=500: Unknown Error
+
+cert_rem_assmt=Voulez-vous vraiment supprimer cette \u00e9valuation intitul\u00e9e
+button_edit_questions=Edit Questions
+button_return_to_main=Return to Main Questions Screen
+cert_rem_q=Voulez-vous vraiment supprimer cette question ?
 change_q_type=Modifier le type de question
 change_question_type=Modifier le type de question
 change=Changer
@@ -224,9 +299,8 @@ rem_p_all=Supprimer la partie et toutes les questions.
 rem_p_only=Supprimer la partie seulement et d\u00e9placer la(les) question(s) vers
 remove_assessment_co=Supprimer la confirmation d'\u00e9valuation
 remove_p_conf=Supprimer la confirmation de la partie
-remove_q_conf=Supprimer la confirmation de question
-remove_question_conf=Supprimer la confirmation de question
-req_rationale=Raisons requises
+remove_q_conf=Supprimer Confirmation de Question
+remove_question_conf=Supprimer Confirmation de Question
 require_rationale=Exige des raisons
 rationale=Raisons
 restart_numbering_be=Recommencer la num\u00e9rotation pour chaque partie.
@@ -257,17 +331,7 @@ submission_message=Message de Remise
 submissions=Copies
 submissions_allowed=remises permises
 subsub=subsub
-sure_rem_q=Voulez-vous vraiment supprimer cette question?
-t_addPart=Ajouter Partie
-t_assessment=Evaluation
-t_attachment=Afficher Fichier Joint dans une fen\u00EAtre diff\u00E9rente
-t_editP=Editer Partie
-t_editQ=Editer Question
-t_question=Question
-t_removeC=Supprimer Choix
-t_removeP=Supprimer Partie
-t_removeQ=Supprimer Question
-t_settings=Rditer Propri\u00E9t\u00E9s
+sure_rem_q=Voulez-vous vraiment supprimer cette question ?
 tf=Vrai/Faux
 the_complete_assessm=L'\u00e9valuation compl\u00e8te est affich\u00e9e sur une page Web.
 time_allowed_seconds=Temps permis (secondes)
