--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/CommonMessages_fr_FR.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/CommonMessages_fr_FR.properties
@@ -21,8 +21,12 @@ publish_action=Publier
 export_action=Exporter
 remove_action=Retirer
 total_scores=Notes totales
-default=D\u00E9faut
-feedback=Retour d'exp\u00E9rience
-action_preview=Pr\u00E9visualiser
-action_duplicate=Copier
+default=D\u00e9faut
+feedback=Retour d'exp\u00e9rience
+correct=Correcte
+action_preview=Aper\u00e7u
+action_print=Imprimer
+action_duplicate=Dupliquer
+action_select=S\u00e9lectionner
 action_save=Enregistrer
+action_save_pair=Enregister l'appariement
