--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_fr_FR.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/DeliveryMessages_fr_FR.properties
@@ -61,15 +61,12 @@ button_return=Retourner
 button_return_select=Retour \u00e0 la liste d'\u00e9valuation
 button_exit=Quitter
 button_save_x=Enregistrer et Quitter
+button_save=Enregistrer
 button_save_for_later=Enregistrer pour plus Tard
-button_save_pub=Enregistrer et publier l'\u00E9valuation
-button_save_x=Enregistrer et quitter
-button_submit=Remettre
-can_you_hear_1=\ n'entendez votre enregistrement audio ? Cliquez
-can_you_hear_2=ici
-can_you_hear_3=pour t\u00E9l\u00E9charger votre enregistrement et pour l'\u00E9couter dans une autre application.
-cert_rem_assmt=Voulez-vous vraiment supprimer cette \u00E9valuation et toutes les questions qu'elle contient ?
-cert_rem_media=Voulez-vous vraiment supprimer ce m\u00E9dia ?
+button_save_pub=Enregistrer et publier l'\u00e9valuation
+button_submit_grading=Remettre pour Notation
+button_submit=Soumettre
+cert_rem_assmt=Voulez-vous vraiment supprimer cette \u00e9valuation et toutes les questions qu'elle contient ?
 cert_rem_q=Voulez-vous vraiment supprimer cette question ?
 cert_rem_media=Voulez-vous vraiment supprimer ce m\u00e9dia ?
 change_q_type=Changer de type de question :
@@ -200,13 +197,10 @@ p_information=Information de la partie :
 p_title=Titre de la partie :
 part_dash=Partie -
 password=Mot de passe
-password_denied=Le nom d'utilisateur ou le mot de passe que vous avez entr\u00E9 est incorrect. Veuillez contacter votre instructeur si vous avez des questions.
-pool_name=Nom de la r\u00E9serve \:
-previous=Pr\u00E9c\u00E9dent
-processing=Traitement en cours.....
-pt=Points
-q=Question
-q_ans=questions r\u00E9pondues
+pool_name=Nom de la r\u00e9serve :
+pt=Points 
+q=Question 
+q_ans=questions r\u00e9pondues
 q_layout=Disposition de la question
 q_level_feedb=Retour d'exp\u00e9rience au niveau des questions
 q_multiple=Question - Choix multiple (plusieurs corrects)
