--- a/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
+++ b/site-manage/site-manage-2.9.x_features-backport/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
@@ -69,6 +69,7 @@ sitinfimp.reuse.user=Importar usuarios de otros sitios
 list.cls=Limpiar B\u00FAsqueda
 sinfo.display=Mostrado en la p\u00E1gina principal del Sitio.
 sinfo.list.groups.student=Grupos de los que es miembro.
+sinfo.list.sections.student=Secciones de las que es miembro.
 list.styasc=Ordenar por tipo (ascendente)
 newsc.tools=Herramientas\:
 addnoti.dontsend=No Enviar - no enviar un email notificando a los nuevos miembros que el sitio est\u00E1 disponible
@@ -208,6 +209,7 @@ sinfo.other=Informaci\u00F3n del sitio
 sitegen.siteinfolist.view=Mostrando
 sitegen.removpart.username=Usuario
 sinfo.list.groups=Grupos
+sinfo.list.sections=Secciones
 man.sofar=Ha seleccionado los siguientes cursos/secci\u00F3n(es)
 java.classes=Por favor, seleccione las clases a borrar.
 addconf.number=\#
@@ -752,3 +754,5 @@ sinfo.language.defaultUserLanguage = Definido por el usuario (defecto)
 java.external = Herramientas externas
 sitegen.siteinfolist.lastupdated = \u00DAltima actualizaci\u00F3n
 sitetype.template.notice = Plantillas disponibles (Haga clic en "Crear un sitio partiendo de una plantilla" para usar una plantilla):
+
+ediacc.yousitcan.warn = Importante: Los usuarios que se suscriban al sitio podr\u00E1n acceder a los materiales del mismo. Si el sitio contiene material sensible, es recomendable no hacerlo suscribible.
