svn merge -r129858:310454 ^/assignment/branches/assignment-2.9.x

--- a/assignment/assignment-2.9.x_features-backport/assignment-bundles/resources/assignment_en_GB.properties
+++ b/assignment/assignment-2.9.x_features-backport/assignment-bundles/resources/assignment_en_GB.properties
@@ -57,3 +57,4 @@ gen.orisub2=Original submission text with the tutor's comments inserted if appli
 non.submission.grade=Assign this mark to all participants without submissions\:
 ungra=Not marked
 gen.gra=Mark
+receive.confirm.submission.email.digest=Send one email per day summarising notifications for student submissions
