--- a/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_es.properties
+++ b/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorMessages_es.properties
@@ -174,6 +174,12 @@ create_modify_a=A\u00f1adir/Editar examen
 create_modify_p=A\u00f1adir/Editar parte
 create_pairing=A\u00f1adir/Editar parejas y el comentario opcional
 no_matching_pair=No se han creado parejas
+correct_im_feedback_opt=Comentario a la relaci\u00F3n correcta (opcional)
+correct_match_feedback_opt=Comentario a la relaci\u00F3n correcta (opcional)
+create_modify_a=A\u00F1adir/Editar examen
+create_modify_p=A\u00F1adir/Editar parte
+create_pairing=A\u00F1adir/Editar parejas y el comentario opcional
+create_IM_pairing=A\u00F1adir/Editar zonas de la imagen y el comentario opcional
 creator=Creador
 delivery_dates=Fechas de entrega
 description_asi_aut=Descripci\u00f3n\: ASI Autor XML Style Sheet\: Audio Multimedia
@@ -206,7 +212,16 @@ graphics=Gr\u00e1ficos
 high_security=Alta seguridad
 hrs=horas
 if_multiple_submissi=Si existen varios env\u00edos por usuario
+im_choice_col=Texto descriptivo
+im_currently_editing=Actualmente en edici\u00F3n
+im_match_col=Zona de la imagen
 image=Imagen
+image_map_question=Imagen con zonas
+image_map_src=Seleccione una imagen
+img_delete=/images/icons/delete.png
+img_edit=/images/icons/pencil.png
+img_part_delete=/images/icons/page_delete.png
+img_part_edit=/images/icons/page_edit.png
 immediate_feedback=Comentarios inmmediato
 import_an_assessment=Importar un examen
 import_from_a_file=Importar desde un fichero
@@ -214,6 +229,9 @@ import_from_q=Copiar desde una bater\u00eda de preguntas
 import_from_question_bank=*** Importar desde el Banco de Preguntas
 import_from_question=Importar desde una bater\u00eda de pruebas
 incorrect_answer_op=Respuesta incorrecta (opcional)
+incorrect_im_feedback_opt=Comentario a la relaci\u00F3n incorrecta (opcional)
+incorrect_match_feedback_opt=Comentario a la relaci\u00F3n incorrecta (opcional)
+information=Informaci\u00F3n
 ins_new_q=Insertar nueva pregunta
 insert_additional_a=Insertar respuestas adicionales
 insert_additional_q_a_combos=A\u00f1adir \u00edtems adicionales
@@ -252,9 +270,18 @@ my_qp=Bater\u00edas de preguntas
 my_ts=Plantillas
 navigation=Navegaci\u00f3n
 new_p=Nueva parte
-next_prev=Existen botones de SIGUIENTE y ANTERIOR en cada p\u00e1gina para la navegaci\u00f3n.
 no_feedback_will_be=NO se mostrar\u00e1n los comentarios a los alumnos.
 no_toc=No hay p\u00e1gina con tabla de contenidos.
+next_prev=Existen botones de SIGUIENTE y ANTERIOR en cada p\u00E1gina para la navegaci\u00F3n.
+no=No
+noMatchingPair_error=Antes de guardar esta cuesti\u00F3n, debe tener por lo menos una pareja. Introduzca una pareja y pulse sobre "Guardar Pareja". En ese momento podr\u00E1 guardar la pregunta pulsando en Guardar en la parte inferior de la p\u00E1gina.
+noImageMapMatchingPair_error=Antes de guardar esta cuesti\u00F3n, debe tener por lo menos una zona en la imagen. Introduzca una zona en la imagen y pulse sobre "Guardar Zona". En ese momento podr\u00E1 guardar la pregunta pulsando en Guardar en la parte inferior de la p\u00E1gina.
+no_attachments=No hay ficheros adjuntos.
+no_feedback_will_be=NO se mostrar\u00E1n los comentarios a los alumnos.
+all_im_zones_needed=Debe establecer todas las zonas de la imagen
+im_description=Descripci\u00F3n
+no_matching_pair=No se han creado parejas
+no_toc=No hay p\u00E1gina con tabla de contenidos.
 none=ninguno
 note_emi_correct_options=Coloque las opciones correctas para cada elemento entre corchetes ([]) al final del \u00edtem. 
 note_emi_separate=Separe estas con comas (,) si hay m\u00e1s de una opci\u00f3n correctas.
@@ -328,10 +355,14 @@ record_the_average_s=Guardar la puntuaci\u00f3n media
 record_the_highest_s=Guardar la puntaci\u00f3n m\u00e1s alta
 rem_p_all=Borrar la parte y todas las preguntas.
 rem_p_only=Borra solamente la parte y mover las preguntas a
-remove_assessment_co=Confirmaci\u00f3n de borrado de examen
-remove_p_conf=Confirmaci\u00f3n de borrado de parte
-remove_q_conf=Confirmaci\u00f3n de borrado de pregunta
-remove_question_conf=Confirmaci\u00f3n de borrado de pregunta
+remove_assessment_co=Confirmaci\u00F3n de borrado de examen
+remove_attachment_conf=confirmar la eliminaci\u00F3n del fichero adjunto
+remove_attachment_heading=Eliminar el fichero adjunto
+remove_p_conf=Confirmaci\u00F3n de borrado de parte
+remove_q_conf=Confirmaci\u00F3n de borrado de pregunta
+remove_question_conf=Confirmaci\u00F3n de borrado de pregunta
+require_all_ok=Permitir que el crédito parcial
+req_rationale=Razonamiento requerido
 require_rationale=Requiere razonamiento
 required=Todos los campos con un asterisco son necesarios si se selecciona "Mostrar las preguntas de la bater\u00eda aleatoriamente"
 rationale=Desarrollo
@@ -699,3 +730,22 @@ matrix_width_list_7=70% columna de las filas de opciones/30% columna de las colu
 matrix_width_list_8=80% columna de las filas de opciones/20% columna de las columnas de opciones
 matrix_width_list_9=90% columna de las filas de opciones/10% columna de las columnas de opciones
 
+defining_answers=<b>Definiendo respuestas</b>
+fib_note_1=Establecer entre llaves "{}" las palabras que se quieran sustituir por un espacio en blanco para que el alumno coloque una respuesta. <br />Ejemplo: Las rosas son {rojas} y las violetas {azules}. 
+fib_note_2=Insertar el caracter "|" entre respuestas para poner sin\u00F3nimos o varias opciones que son v\u00E1lidas.<br />Ejemplo: El deporte m\u00E1s seguido en España es el {fútbol | futbol | balompié}. 
+fib_note_3=Insertar un asterisco (*) para uno o m\u00E1s caracteres comod\u00EDn.<br />Ejemplo: Est\u00E1 lloviendo a {c*} y hace un fr\u00EDo que {p*}.
+note_defining_answers=Establecer entre llaves "{}" el valor o valores num\u00E9ricos que se sustituir\u00E1n por espacios en blanco para que el alumno coloque una respuesta. ejemplo: 3*3={9}.
+range=<b>Rango:</b>Insertar el caracter "|" para establecer un rango de valores que se aceptar\u00E1n como respuesta.
+range_example= Ejemplo: El precio es {12.2|14.5}. Si la respuesta del alumno se encuentra entre 12.2 y 14.5 se considerar\u00E1 v\u00E1lida, fuera de ese rango no lo ser\u00E1.
+scientific_notataion=<b>Notaci\u00F3n cient\u00EDfica:</b> Se TIENE QUE usar el punto como separador decimal y la letra "E" o "e" para definir el exponente.
+scientific_notataion_example=Ejemplo: {6.022E23} expresa el n\u00FAmero de Avogrado.
+complex_numbers=Los <b>N\u00FAmeros complejos</b> deben representarse usando esta expresi\u00F3n (a + bi) donde "a" y "b" deben tener necesariamente un valor.
+complex_numbers_example=Ejemplo: {1+1i} es v\u00E1lido mientras que {1+i} no lo es. Igualmente, {0+9i} es v\u00E1lido mientras que {9i} no lo es.
+accepted_characters=<b>Caracteres aceptados</b>
+note_accepted_fin_1=Solamente se permiten dentro de las llaves n\u00FAmeros, separadores decimales, signos (ej, -5), o <br/>espacios (ej., como separadores de millares, 5 000). <b>NOTA:</b> Para notaci\u00F3n cient\u00EDfica, <br/>SE TIENE que usar el punto como separador decimal.
+note_accepted_fin_2=Cualquier otro caracter(ej. $ o %) debe ir fuera de las llaves si fuera necesario. Por ejemplo: 3/10= {30}% <br/>(Solamente el valor 30 debe ser sustituido por una espacio en blanco, {30%} es incorrecto)
+note_accepted_fin_3=Cuando se define un rango de valores, el valor anterior al caracter "|" debe ser menor que el valor que va despu\u00E9s <br/>del caracter "|" (ej., {12.2|14.5} es correcto y {14.5|12.2} no lo es).
+for_example_accepted_fin=Por ejemplo: 3/10= {30}% (Solamente el valor 30 debe ser sustituido por una espacio en blanco, {30%} es incorrecto)
+
+case_sensitive_note=Cuando est\u00E1 marcado, la respuesta del estudiante debe coincidir exactamente respetando las may\u00FAsculas y las min\u00FAsculas.
+case_sensitive_example=Ejemplo: Si la respuesta correcta es "ABC" y la respuesta del estudiante es "aBc", la respuesta se marcar\u00E1 como incorrecta.
