--- a/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es.properties
+++ b/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages_es.properties
@@ -61,6 +61,14 @@ pool=Bater\u00eda
 question=Pregunta
 q=Pregunta
 q_view=Preguntas
+q_imq=Imagen con zonas
+qtile_1_eq=Cuartil 1\u00BA
+qtile_3_eq=Cuartil 3\u00BA
+question=Pregunta
+random_draw_info_1=(seleccionar de forma aleatoria,
+random_draw_info_2=cuestiones de la bater\u00EDa 
+random_draw_info_3=)\:
+random_drow_part=Esta es una parte gr\u00E1fica aleatoria.
 range_eq=Rango
 resp_fld=Respuesta\:
 responses=Respuestas
@@ -226,6 +234,31 @@ t_submissionStatus=Ir a la p\u00e1gina del estado del env\u00edo
 t_title_download_file_submissions=Ir a la p\u00e1gina para descargar el archivo con los env\u00edos
 t_studentScores=Puntuaciones del estudiante
 t_student=Ver la respuesta del estudiante
+stat_view=Estad\u00EDsticas
+stats_fld=Estad\u00EDsticas\:
+status=Estado
+std_dev=Desviaci\u00F3n est\u00E1ndar
+stud_remain=alumnos contestando,
+sub_id=ID del env\u00EDo
+sub_stat=Estado del env\u00EDo
+sub_status=Estado del env\u00EDo
+sub_view=Env\u00EDos
+subject=Asunto
+submission_id=ID de env\u00EDo
+submit_date=Fecha de env\u00EDo
+submitted=Enviado
+t_fileUpload=Mostrar subida de ficheros
+t_fullShortAnswer=Visualizar la respuesta corta completa
+t_histogram=Ir a la p\u00E1gina de estad\u00EDsitcas
+t_modelShortAnswer=Modelo de respuesta corta
+t_hotspotanswer=Muestra la respuesta del alumno en la imagen
+t_playAudio=Reproducir sonido
+t_questionScores=Ir a la p\u00E1gina de puntuaci\u00F3n de las preguntas
+t_rationale=Ver el razonamiento del estudiante
+t_retake=Hacer de nuevo
+t_sortAdjustScore=Ordenar por puntuaci\u00F3n de ajuste
+t_sortComments=Ordenar por comentarios
+t_sortFinalScore=Ordenar por puntuaci\u00F3n final
 t_sortLastName=Ordenar por apellidos
 t_sortSubmissionId=Ordenar por Id de env\u00edo
 t_sortUserId=Ordenar por id del usuario
@@ -319,3 +352,7 @@ for_selected_sections_groups=para las secciones/grupos seleccionados
 download=Descargar
 
 
+applyGradesDesc=a todos los participantes "Sin entrega". 
+applyGrades=Aplicar esta puntuaci\u00F3n
+
+show_hotspotanswer=En la imagen
