--- a/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorImportExport_es_ES.properties
+++ b/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AuthorImportExport_es_ES.properties
@@ -29,6 +29,7 @@ import_qp=Importar Bater\u00EDa
 ims_cp=IMS Content Packaging
 ims_qti=IMS QTI-compliant XML
 qti12=QTI v 1.2
+export_imagemap_message=<b>Nota</b>: Las preguntas de Imagen con Zonas no se exportar\u00E1n debido a que no se corresponden con un est\u00E1ndar de tipo de pregunta. Para copiarlas de un sitio a otro puede usar la funci\u00F3n de Importar de Sitio o las bater\u00EDas de preguntas.
 
 file_is=Este archivo ha sido:
 from_samigo=Exportado desde este sistema (u otro Sakai)
