Changed name of DropBox

--- a/custom_builds/103/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/103/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -48,7 +48,7 @@ sakai.createuser.title                              = New Account
 sakai.discussion.description                        = Deprecated tool: please use Forums or other alternative
 sakai.discussion.title                              = Discussion
 sakai.dropbox.description                           = For private file sharing between instructor and student
-sakai.dropbox.title                                 = Drop Box
+sakai.dropbox.title                                 = FileDrop
 sakai.filepicker.description                        = Sakai File Picker Helper Tool
 sakai.filepicker.title                              = Choose File
 sakai.forums.description                            = Display forums and topics of a particular site
