--- a/custom_builds/7/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/7/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -52,7 +52,7 @@ sakai.dropbox.title                                 = Drop Box
 sakai.filepicker.description                        = Sakai File Picker Helper Tool
 sakai.filepicker.title                              = Choose File
 sakai.forums.description                            = Display forums and topics of a particular site
-sakai.forums.title                                  = Forums
+sakai.forums.title                                  = Discussion Forums
 sakai.gradebook.testservice.description             = Check Gradebook service
 sakai.gradebook.testservice.title                   = Gradebook Service Test
 sakai.gradebook.tool.description                    = For storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
