Backport for SAK-27937 - Add a course grade option to disable course points on student view

--- a/gradebook/gradebook-10.x_features-backport/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/gradebook/gradebook-10.x_features-backport/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -320,6 +320,7 @@ feedback_options_instruction=Student privacy is built in &#8212; students cannot
 feedback_options_grade_display=Grade Display
 feedback_options_grade_display_assignment_grades=Display any released gradebook items and entered scores to students. Gradebook items that have been individually set to "released" will not display to students until this is checked.
 feedback_options_grade_display_course_grades=Display course grade to students now
+feedback_options_grade_display_course_points=Display course points to students now
 feedback_options_grade_display_course_grades_tip=What's this?
 feedback_options_grade_conversion=Grade Conversion
 feedback_options_grade_type=Grade Type
