Assignment1 Name = Assignment1 Assignment2 Name = Assignment2 Schedule Name = Calendar SEMS-71 Rename BBB to Webinars

--- a/custom_builds/19/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/19/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -35,8 +35,9 @@ sakai.archive.description                           = An administration tool to 
 sakai.archive.title                                 = Site Archive
 sakai.assignment.description                        = For posting and submitting assignment(s) online
 sakai.assignment.grades.description                 = For posting, submitting and grading assignment(s) online
-sakai.assignment.grades.title                       = Assignments
-sakai.assignment.title                              = Assignments
+sakai.assignment.grades.title                       = Assignments1
+sakai.assignment.title                              = Assignments1
+sakai.assignment2.title				    = Assignments2
 sakai.basiclti.title                                = External Tool
 sakai.basiclti.description                          = Launch external tools using IMS Learning Tools Interoperability.
 sakai.chat.description                              = For real-time conversations in written form
@@ -140,7 +141,7 @@ sakai.sample.tool.servlet2.title                    = Simple Sample Servlet Tool
 sakai.sample.tools.OSIDRepository.description       = Display registered Repositories and Search
 sakai.sample.tools.OSIDRepository.title             = Sample use of RepositoryManager Component
 sakai.schedule.description                          = For posting and viewing deadlines, events, etc.
-sakai.schedule.title                                = Schedule
+sakai.schedule.title                                = Calendar
 sakai.scheduler.description                         = Job Scheduler Based on Quartz
 sakai.scheduler.title                               = Job Scheduler
 sakai.search.description                            = For searching content
@@ -230,3 +231,6 @@ sakai.lessonbuildertool.description=For creating content modules and sequences; 
 
 sakai.dashboard.title= Dashboard
 sakai.dashboard.description= Unified My Workspace display of recent announcements, resources, assignments, calendar events, etc. 
+
+sakai.bbb.title=Webinars
+
