Updating branch with latest changes

--- a/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
+++ b/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
@@ -19,7 +19,7 @@ areyousur_single=\u00bfEst\u00e1 seguro de que desea borrar esta tarea?
 
 assig3=La fecha de entrega de la tarea debe ser posterior a la fecha de de apertura.
 
-assig4=La fecha de entrega no puede estar en el pasado.
+assig4=Va a establecer la fecha de entrega de la tarea en el pasado. Realice los cambios necesarios o vuelva a hacer clic en el bot\u00f3n original para confirmar.
 
 assig5=Tarea\: Nueva fecha de entrega para ''{0}''
 
@@ -219,7 +219,7 @@ gen.stusub=Env\u00edos del Alumno
 gen.stuvie=Vista del Alumno
 gen.stuvieof=Vista del Alumno de la tarea
 gen.stucantdo=Los estudiantes no pueden guardar o enviar la tarea hasta que se abra el plazo.
-gen.stuwonsee=Los alumnos no ver\u00e1n esta tarea hasta la fecha de apertura.
+gen.stuwonsee=Los alumnos no ver\u00e1n esta tarea hasta la fecha visible.
 gen.subm=Env\u00edo de la Tarea
 gen.submission=Env\u00edo
 gen.resubmission=Reenv\u00edo
