svn merge -r128332:HEAD https://source.sakaiproject.org/svn/msub/longsight.com/custom_builds/124/config/config-2.9.x

--- a/custom_builds/124/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/124/config/config-10.x_custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -52,7 +52,7 @@ sakai.dropbox.title                                 = Drop Box
 sakai.filepicker.description                        = Sakai File Picker Helper Tool
 sakai.filepicker.title                              = Choose File
 sakai.forums.description                            = Display forums and topics of a particular site
-sakai.forums.title                                  = Forums
+sakai.forums.title                                  = Discussions
 sakai.gradebook.testservice.description             = Check Gradebook service
 sakai.gradebook.testservice.title                   = Gradebook Service Test
 sakai.gradebook.tool.description                    = For storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
@@ -80,7 +80,7 @@ sakai.memory.title                                  = Memory
 sakai.messageforums.helper.description              = Message Center Navigation Helper Tool
 sakai.messageforums.helper.title                    = Private Messages Helper
 sakai.messages.description                          = Display messages to/from users of a particular site
-sakai.messages.title                                = Messages
+sakai.messages.title                                = Course Mail
 sakai.metaobj.description                           = Sakai Forms Tool
 sakai.metaobj.form.description                      = Sakai Form Helper Tool
 sakai.metaobj.form.resourceCreateHelper.description = Resource Form Create Helper
@@ -140,7 +140,7 @@ sakai.sample.tool.servlet2.title                    = Simple Sample Servlet Tool
 sakai.sample.tools.OSIDRepository.description       = Display registered Repositories and Search
 sakai.sample.tools.OSIDRepository.title             = Sample use of RepositoryManager Component
 sakai.schedule.description                          = For posting and viewing deadlines, events, etc.
-sakai.schedule.title                                = Schedule
+sakai.schedule.title                                = Calendar
 sakai.scheduler.description                         = Job Scheduler Based on Quartz
 sakai.scheduler.title                               = Job Scheduler
 sakai.search.description                            = For searching content
