--- a/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -81,6 +81,7 @@ overview_instruction=Click a title to view complete details and to grade the ite
 overview_assignments_title=Gradebook Items Summary
 overview_assignments_header_name=Title
 due_date=Due Date
+auto_release_date=Auto Release Date
 overview_assignments_header_average=Class Avg
 overview_assignments_header_average_exp=Class Average (dash means no grades yet)
 overview_assignments_header_points=Points
@@ -302,6 +303,7 @@ edit_assignment_save_percentage=You have successfully updated gradebook item {0}
 edit_assignment_save_changes=Save Changes
 edit_assignment_external_items= * Please go to {0} to edit these settings.
 edit_assignment_due_date_external=Due Date *
+edit_assignment_auto_release_date_external=Auto Release Date *
 
 # Remove assignment page
 remove_assignment_page_title=Remove Gradebook Item
