Updated name for bbb

--- a/custom_builds/67/config/config-10.x-custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/67/config/config-10.x-custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -246,3 +246,5 @@ sakai.delegatedaccess.shopping.description=Search for available sites for shoppi
 sakai.adminsiteperms.title=Admin Site Perms
 sakai.adminsiteperms.description=Allows adminstrators to control permissions for all sites of a type and roles within that site
 
+sakai.bbb.title=BigBlueButton
+sakai.bbb.description=Sakai Interface onto the BigBlueButton conferencing tool
