Adding bbb-tool

--- a/custom_builds/67/config/config-10.x-custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/67/config/config-10.x-custom/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -248,3 +248,6 @@ sakai.adminsiteperms.description=Allows adminstrators to control permissions for
 
 sakai.bbb.title=BigBlueButton
 sakai.bbb.description=Sakai Interface onto the BigBlueButton conferencing tool
+
+sakai.bbb-tool.title=BigBlueButton
+sakai.bbb-tool.description=Sakai Interface onto the BigBlueButton conferencing tool
