--- a/gradebook/gradebook-10.x_iRubric/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages_es.properties
+++ b/gradebook/gradebook-10.x_iRubric/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages_es.properties
@@ -1,4 +1,3 @@
-#X-Generator: crowdin.net
 #
 #
 # There's an interesting and buggy behavior in java resource bundles.  When the
@@ -86,6 +85,7 @@ overview_assignments_header_average=Media
 overview_assignments_header_average_exp=Media de la clase (los guiones significan que no hay calificaciones todav\u00eda)
 overview_assignments_header_points=Puntos
 overview_assignments_header_sorting=Ordenando
+overview_assignments_header_total_points=Puntos Totales
 overview_assignments_sort_up=Ordenar hacia arriba
 overview_assignments_sort_down=Ordenar hacia abajo
 overview_grade_option_assignments_viewable=Actualmente, los estudiantes pueden ver la puntuaci\u00f3n de sus tareas y ex\u00e1menes, pero no la nota acumulativa ni la final.
@@ -269,7 +269,7 @@ add_assignment_save=La tarea {0} ha sido a\u00f1adida.
 add_assignment_counted=Incluir esta tarea al calcular la nota del curso
 add_assignment_counted_detail=La nota ser\u00e1 visible a los alumnos.
 add_assignment_released=Publicar la tarea. Desde este momento, ser\u00e1 visible en la lista de tareas que se mostrar\u00e1 a los alumnos
-add_assignment_released_conditional=La configuraci\u00f3n de Calificaciones debe tener habilitada la opci\u00f3n ''Publicar entradas en Calificaciones y puntuaciones'' para que este elemento sea visible por los alumnos. Este sitio no la tiene. Para habilitarla, vaya a la p\u00e1gina de configuraci\u00f3n de Calificaciones.
+add_assignment_released_conditional=La configuraci\u00f3n de Calificaciones debe tener habilitada la opci\u00f3n ''Mostrar elementos publicados...'' para que este elemento sea visible por los alumnos. Este sitio no la tiene. Para habilitarla, vaya a la p\u00e1gina de configuraci\u00f3n de Calificaciones.
 add_assignment_category=Categor\u00eda
 add_assignment_category_info=Los elementos no asignados a una categor\u00eda no se contar\u00e1n ni en la nota acumulativa ni en la nota del curso.
 add_assignment_selector1=A\u00f1adir
@@ -360,7 +360,9 @@ student_view_cum_score_details={0}%
 student_view_return_to_inst_view=Volver a la vista del profesor de las notas de {0}
 student_view_legend_title=Leyenda\:
 student_view_footnote_symbol1=*
+student_view_footnote_symbol2=**
 student_view_footnote_legend1=Notas en par\u00e9ntesis () no son incluidas en el c\u00e1lculo de la nota de curso.
+student_view_footnote_legend2=La puntuaci\u00f3n del curso no tiene en cuenta porcentajes u otros factores de calificaci\u00f3n debido a la configuraci\u00f3n introducida por el profesor(es). Para m\u00e1s informaci\u00f3n consulte la gu\u00eda docente o contacte con su profesor(es).
 
 inst_view_page_title=Notas de {0}
 inst_view_student_summary=Resumen del alumno
@@ -580,7 +582,7 @@ grade_entry_scale=Entrada de escala de notas
 grade_scale_grade=Notas
 grade_entry_invalid=Por favor, seleccione un m\u00e9todo de entrada de notas.
 display_released_items=Mostrar elementos publicados en Calificaciones a los estudiantes
-display_released_items_info=Los elementos de Calificaciones se publican cuando se crean, editan o califican. Las puntuaciones introducidas se mostrar\u00e1n una vez que el elemento se incluya en la puntuaci\u00f3n acumulativa o la nota del curso. ''Incluir'' se establece mientras se califican los elementos.
+display_released_items_info=Se puede publicar un elemento de Calificaciones al crearlo o editarlo.
 gb_setup_save=Guardar cambios
 gb_setup_cancel=Cancelar
 gb_save_msg=\u00a1Enhorabuena\! Sus cambios se han guardado.
@@ -700,4 +702,3 @@ calculatedgrade=Calificaci\u00f3n calculada
 gradeoverride=Sobreescribir Nota
 coursegrade=Nota del curso
 lastmodifieddate=Fecha del \u00faltimo registro
-
