Milestone 2: All elements saving to database

--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
@@ -265,6 +265,7 @@ simplepage.add-alert-need-role=You must choose at least one role.
 simplepage.add-alert.specify-dates=Specify Dates
 simplepage.add-alert.specify-dates-info=Choose when this alert will be sent
 simplepage.add-alert.beginning=Beginning
+simplepage.add-alert.ending=Ending
 simplepage.add-alert.date=Date
 simplepage.add-alert.time=Time
 simplepage.add-alert.recurrence=Recurrence
@@ -273,6 +274,7 @@ simplepage.add-alert.daily=Daily
 simplepage.add-alert.weekly=Weekly
 simplepage.add-alert-other-message-label=All other inactive alert message
 simplepage.add-alert-need-begin-date=Begin date is required.
+simplepage.add-alert-need-end-date=End date is required.
 
 simplepage.exportcc-pagealreadydone=Subpage {2} appears on page {1}. However it has already been included as a subpage of another page. It will not be included a second time.
 simplepage.exportcc-bad-type=Item {2} on page {1} is of a type that can't be put in a Common Cartridge: {3}
